[Chromium] WebOptionElement should inherit WebElement instead of WebFormControlElement https://bugs.webkit.org/show_bug.cgi?id=80089

Change class hierarchy of WebOptionElement to match with specification.

Patch by Yoshifumi Inoue <yosin@chromium.org> on 2012-03-05
Reviewed by Darin Fisher.

* public/WebOptionElement.h: Replace to WebElement from WebFormControlElement
(WebKit::WebOptionElement::WebOptionElement):
(WebKit::WebOptionElement::operator=):
(WebKit::WebOptionElement::assign):
* src/WebOptionElement.cpp:
(WebKit::WebOptionElement::WebOptionElement):

git-svn-id: svn://svn.chromium.org/blink/trunk@109827 bbb929c8-8fbe-4397-9dbb-9b2b20218538