third_party/WebKit/Source/WebKit/chromium/src/WebOptionElement.cpp
@@ -84,7 +84,7 @@ bool WebOptionElement::isEnabled() const
 }
 
 WebOptionElement::WebOptionElement(const PassRefPtr<HTMLOptionElement>& elem)
-    : WebFormControlElement(elem)
+    : WebElement(elem)
 {
 }
 
